<resources>
    <string name="app_name">MatchMakers</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_messages">Messages</string>
    <string name="title_profile">Profile</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="CreateAnAccount">Create an Account</string>
    <string name="loginRedirect">Existing User Login</string>
    <string name="name_input">Input your name</string>
    <string name="interest_input">Enter an interest</string>
    <string name="submit">Submit</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="send_message">Send Message</string>
    <string name="match_like">Match Like</string>
    <string name="match_dislike">Match Dislike</string>
    <string name="avatar_image">Avatar Image</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>
    <string name="age_input">Age</string>
    <string name="no_more_recommended_users">no_more_recommended_users</string>
    <string name="select_interest1">Select an interest</string>
    <string name="gallery_image2_description">Gallery image 2</string>
    <string name="add_gallery_photo2">Add photo</string>
    <string name="gallery_image3_description">Gallery image 3</string>
    <string name="name_description">Name</string>
    <string name="avatar_description">Avatar</string>
    <string name="biography_description">Biography</string>
    <string name="interests_description">Interests</string>
    <string name="add_avatar">Add avatar</string>
    <string name="add_gallery_photo1">Add photo</string>
    <string name="gallery_image1_description">Gallery photo 1</string>
    <string name="add_gallery_photo3">Add photo</string>
    <string name="biography_input">Add a bio</string>
    <string name="profile_edit_avatar">Edit Avatar</string>
    <string name="profile_edit_interests">Edit Interests</string>
    <string name="profile_edit_gallery">Open Gallery</string>
    <string name="profile_name_hint">Enter your name</string>
    <string name="profile_age_hint">Enter your age</string>
    <string name="profile_biography_hint">Tell us about yourself</string>
    <string name="profile_save">Save Profile</string>
    <string name="log_out">Log Out</string>
    <string name="interests_title">Your Interests</string>
    <string name="interests_description_1">Select up to 3 different interests.</string>
    <string name="interests_description_2">Tap on an interest from the list to remove it.</string>
    <string name="interests_description_3">Add new interests from the menu below</string>
    <string name="interests_save">Save Interests</string>
    <string name="interests_cancel">Discard Changes</string>
    <string name="gallery_image_1">Image 1</string>
    <string name="gallery_edit">Edit</string>
    <string name="gallery_image_2">Image 2</string>
    <string name="gallery_delete">Delete</string>
    <string name="gallery_image_3">Image 3</string>
    <string name="gallery_add">Add New Image</string>
    <string name="edit_avatar_camera">Use Camera</string>
    <string name="edit_avatar_gallery">Select from Gallery</string>
    <string name="report_title">Select a reason for your report</string>
    <string name="report_reason_1">Inappropriate profile or images</string>
    <string name="report_reason_2">Disruptive or hateful behavior</string>
    <string name="report_reason_3">User is spamming messages</string>
    <string name="report_reason_other">Other</string>
    <string name="report_input">Additional information (optional)</string>
    <string name="report_submit">Submit Report</string>
    <string name="chat_view_profile">View Profile</string>
    <string name="chat_input">Type a message...</string>
    <string name="block_user_description">Are you sure you want to block this user?</string>
</resources>