<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/round_home_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/round_location_on_24"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/round_add_reaction_24"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/round_chat_24"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/round_person_24"
        android:title="@string/title_profile" />

</menu>