<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.matchmakers.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.matchmakers.ui.dashboard.DashboardFragment"
        android:label="Dashboard"
        tools:layout="@layout/fragment_dashboard">
        <!-- 这个操作将用于导航至 MatchFragment -->
        <action
            android:id="@+id/action_dashboardFragment_to_matchFragment"
            app:destination="@id/matchFragment" />
    </fragment>

    <fragment
        android:id="@+id/matchFragment"
        android:name="com.example.matchmakers.match.MatchFragment"
        android:label="Match"
        tools:layout="@layout/fragment_match" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.matchmakers.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.example.matchmakers.ui.messages.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.matchmakers.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>